What's new in ZODB3 3.3 beta 1
==============================
Release date: DD-MMM-2004

ZODB
----

fsrecover.py couldn't work, because it referenced attributes that no
longer existed after the MVCC changes.  Repaired that, and added new
tests to ensure it continues working.



What's new in ZODB3 3.3 alpha 3
===============================
Release date: 16-Apr-2004

transaction
-----------

There is a new transaction package, which provides new interfaces for
application code and for the interaction between transactions and
resource managers.

The top-level transaction package has functions commit(), abort(),
get(), and begin().  They should be used instead of the magic
get_transaction() builtin, which will be deprecated.  For example:

    >>> get_transaction().commit()

should now be written as

    >>> import transaction
    >>> transaction.commit()

The new API provides explicit transaction manager objects.  The
transaction manager (TM) is responsible for associating resource
managers with a "current" transaction.  It is available as
`transaction.manager`.  The default TM, implemented by
ThreadedTransactionManager, assigns each thread its own current
transaction.  The TransactionManager class assigns all threads to the
same transaction.

A transaction manager instance can be passed as the txn_mgr argument
to DB.open().  If you do, the connection will use the specified
transaction manager instead of the default transaction manager.  You
will need to call commit() and abort() on the transaction manager
explicitly.  For example:

    >>> tm = transaction.TransactionManager()
    >>> cn = db.open(txn_mgr=tm)
    [...]
    >>> tm.commit()

The setLocalTransaction() and getTransaction() methods of Connection
are deprecated.  Use an explicit TM passed via txn_mgr instead.  The
setLocalTransaction() manager functions still works, but it returns a
TM instead of a Transaction.

The TM creates Transaction objects, which are used for exactly one